# routes/products.js
@@ -5,10 +5,10 @@ const validation = require('../validation/validate')
 
 
 router.get('/', validation.requiresAuth, productsController.getAllProducts);
-router.get('/:id', validation.validateId, validation.requiresAuth, productsController.getsingleProduct);
-router.post('/', validation.validateProduct, validation.requiresAuth, productsController.PostNewProduct);
-router.put('/:id', validation.validateProduct, validation.requiresAuth, productsController.UpdateProduct);
-router.delete('/:id', validation.validateId, validation.requiresAuth, productsController.DeleteProduct);
+router.get('/:id', validation.requiresAuth,validation.validateId, productsController.getsingleProduct);
+router.post('/', validation.requiresAuth,validation.validateProduct, productsController.PostNewProduct);
+router.put('/:id', validation.requiresAuth,validation.validateProduct, productsController.UpdateProduct);
+router.delete('/:id', validation.requiresAuth,validation.validateId, productsController.DeleteProduct);
 //validate the id 
 
 module.exports = router;
